compiler/tests/invalid_programs/modules/missing_import.jm
#!ImportError

import there_is_no_file_with_this_name
